--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -217,6 +217,7 @@ test:
 production:
   <<: *default_settings
   monitor_mode: true
+  app_name: My Application (Production)
 
 # Many applications have a staging environment which behaves
 # identically to production.  Support for that environment is provided
