--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -3,7 +3,7 @@
 # Ruby, Java, .NET, PHP, and Python applications with deep visibility and low overhead.
 # For more information, visit www.newrelic.com.
 #
-# Generated November 30, 2011
+# Generated February 16, 2012
 #
 # This configuration file is custom generated for LifeChurch_1
 
@@ -109,7 +109,7 @@ common: &default_settings
     # Transaction tracer is enabled by default. Set this to false to
     # turn it off. This feature is only available at the Professional
     # product level.
-    enabled: true
+    enabled: false
     
     # Threshold in seconds for when to collect a transaction
     # trace. When the response time of a controller action exceeds
@@ -147,7 +147,7 @@ common: &default_settings
     # Error collector is enabled by default. Set this to false to turn
     # it off. This feature is only available at the Professional
     # product level.
-    enabled: true
+    enabled: false
     
     # Rails Only - tells error collector whether or not to capture a 
     # source snippet around the place of the error when errors are View 
@@ -217,7 +217,6 @@ test:
 production:
   <<: *default_settings
   monitor_mode: true
-  app_name: My Application (Production)
 
 # Many applications have a staging environment which behaves
 # identically to production.  Support for that environment is provided
