--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -226,3 +226,12 @@ staging:
   <<: *default_settings
   monitor_mode: true
   app_name: YouVersion Web (Staging)
+  
+# Turn on the agent in production for 24x7 monitoring.  New Relic
+# testing shows an average performance impact of < 5 ms per
+# transaction, so you can leave this on all the time without
+# incurring any user-visible performance degradation.
+production_heroku:
+  <<: *default_settings
+  monitor_mode: true
+  app_name: YouVersion Web (Heroku)
