--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -217,7 +217,7 @@ test:
 production_heroku:
   <<: *default_settings
   monitor_mode: true
-  app_name: YouVersion Web (Heroku2)
+  app_name: YouVersion Web (Heroku Production)
 
 # Many applications have a staging environment which behaves
 # identically to production.  Support for that environment is provided
