--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -15,6 +15,7 @@ common: &default_settings
   # account.  This key binds your Agent's data to your account in the
   # New Relic service.
   license_key: '335e3b349585a4baf47573354334b62504176bfb'
+  disable_serialization: true
   
   # Agent Enabled (Ruby/Rails Only)
   # Use this setting to force the agent to run or not run.
