--- a/config/_config.yml
+++ b/config/_config.yml
@@ -1,16 +1,4 @@
-common: &common
-  # youversion.com
-  # twitter_key: "HhYNsW1KCxFH5WeCQ3nRXQ"
-  # twitter_secret: "LppBTdEyoJ3ASfPqxHz97IDW5UxpXVim2DbrqdJSrTI"
-  # facebook_app_id: "105030176203924"
-  # facebook_secret: "9d03678ddd8b5588c4e6c91bd996cce2"
-  #
-  # www.cbailey.yvdev.com
-  # twitter_key: "jJwCaFguoe3a40fXBVWsCw"
-  # twitter_secret: "Hf7dR18UjU6nuoeVTm15EQSDdR1NmbxlElS3tpFRY"
-  # facebook_app_id: "214636785287293"
-  # facebook_secret: "279d2af7fd1de6ed8d74a67ca9de530a"
-  #
+common:
   facebook_app_id: 105030176203924
   facebook_secret: 9d03678ddd8b5588c4e6c91bd996cce2
   twitter_key: KobF6Lt0zWDFBDxZgZyg
@@ -18,7 +6,6 @@ common: &common
   avatar_path: http://d5xlnxqvcdji7.cloudfront.net/users/images/
   avatar_path_s3: http://static-youversionapi-com.s3-website-us-east-1.amazonaws.com/users/images/
   ssl_avatar_path: https://d5xlnxqvcdji7.cloudfront.net/users/images/
-  #the origin avatar paths aren't working for s3
   ssl_avatar_path_s3: http://static-youversionapi-com.s3-website-us-east-1.amazonaws.com/users/images/
   bloodhound_username: lifechurchtv
   bloodhound_password: password
@@ -27,41 +14,15 @@ common: &common
   api_version: "3.0"
   memcache_server: localhost
 
-development:
-  <<: *common
-
-test: &test
-  <<: *common
-  # api_root: youversionapistaging.com
-  # api_referer: web-testing.youversion.com
-  # api_version: "3.0"
-  # memcache_server: localhost
-
 staging:
-  <<: *common
-  <<: *test
   api_root: youversionapi.com
   api_referer: web-staging.youversionapi.com
   memcache_server: memcache.youversion.com
   memcache_server: localhost
 
-production: &production
-  <<: *common
+production:
   api_root: youversionapi.com
   api_referer: web.youversionapi.com
   memcache_server: memcache.youversion.com
   twitter_key: "HhYNsW1KCxFH5WeCQ3nRXQ"
   twitter_secret: "LppBTdEyoJ3ASfPqxHz97IDW5UxpXVim2DbrqdJSrTI"
-  # facebook_app_id: "105030176203924"
-  # facebook_secret: "9d03678ddd8b5588c4e6c91bd996cce2"
-  # facebook_app_id: "306713076033387"
-  # facebook_secret: "1a8bf87913629f4162b6c91e5fe943a2"
-
-demo: *test
-
-production_yv:
-  <<: *production
-
-production_heroku:
-  <<: *production
-
