--- a/config/_config.yml
+++ b/config/_config.yml
@@ -13,14 +13,19 @@ common:
   api_referer: web-dev.youversionapistaging.com
   api_version: "3.0"
   memcache_server: localhost
+  api_default_timeout: 7
+  rack_execution_timeout: 1000
 
 staging:
   api_root: youversionapi.com
   api_referer: web-staging.youversionapi.com
+  rack_execution_timeout: 15
 
 production:
   api_root: youversionapi.com
   api_referer: web.youversionapi.com
+  api_default_timeout: 5
+  rack_execution_timeout: 15
   memcache_server: memcache.youversion.com
   twitter_key: "HhYNsW1KCxFH5WeCQ3nRXQ"
   twitter_secret: "LppBTdEyoJ3ASfPqxHz97IDW5UxpXVim2DbrqdJSrTI"
