--- a/config/_config.yml
+++ b/config/_config.yml
@@ -11,7 +11,8 @@ common:
   bloodhound_password: password
   api_root: youversionapi.com
   # api_root: youversionapistaging.com
-  api_referer: web-dev.youversionapistaging.com
+  # api_referer: web-dev.youversionapistaging.com
+  api_referer: web-dev.youversionapi.com
   api_version: "3.0"
   memcache_server: localhost
   api_default_timeout: 7
