--- a/config/tddium.yml
+++ b/config/tddium.yml
@@ -2,6 +2,6 @@
 :tddium:
   :test_pattern:
     # - features/root_load.feature
-    - features/versions.feature
+    # - features/versions.feature
     # - spec/**_spec.rb
     # - test/**_test.rb
