--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -17,7 +17,7 @@ common: &default_settings
   license_key: '<%= ENV["NEW_RELIC_LICENSE_KEY"] %>'
   #license_key: '335e3b349585a4baf47573354334b62504176bfb'
   disable_serialization: true
-  
+
   # Agent Enabled (Ruby/Rails Only)
   # Use this setting to force the agent to run or not run.
   # Default is 'auto' which means the agent will install and run only
@@ -26,23 +26,26 @@ common: &default_settings
   # completely turn the agent off regardless of the other settings.
   # Valid values are true, false and auto.
   # agent_enabled: auto
-  
+
   # Application Name
   # Set this to be the name of your application as you'd like it show
   # up in New Relic.  New Relic will then auto-map instances of your application
   # into a New Relic "application" on your home dashboard page. If you want
   # to map this instance into multiple apps, like "AJAX Requests" and
   # "All UI" then specify a semicolon-separated list of up to three
-  # distinct names.  If you comment this out, it defaults to the 
+  # distinct names.  If you comment this out, it defaults to the
   # capitalized RAILS_ENV (i.e., Production, Staging, etc)
   app_name: <%= ENV["NEW_RELIC_APP_NAME"] %>
   #app_name: YouVersion Web
 
-  # When "true", the agent collects performance data about your 
+  # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
-  # newrelic.com. This global switch is normally overridden for each 
+  # newrelic.com. This global switch is normally overridden for each
   # environment below. (formerly called 'enabled')
   monitor_mode: true
+
+  browser_monitoring:
+   auto_instrument: true
 
   # Developer mode should be off in every environment but
   # development as it has very high overhead in memory.
@@ -51,8 +54,8 @@ common: &default_settings
   # The newrelic agent generates its own log file to keep its logging
   # information separate from that of your application.  Specify its
   # log level here.
-  log_level: info
-  
+  log_level: <%= ENV["NEW_RELIC_LOG_LEVEL"] || "info" %>
+
   # The newrelic agent communicates with the New Relic service via http by
   # default.  If you want to communicate via https to increase
   # security, then turn on SSL by setting this value to true.  Note,
@@ -72,14 +75,14 @@ common: &default_settings
   # use a non-blocking lookup, so in a worst case, if you have DNS
   # problems, your app may block indefinitely.
   # verify_certificate: true
-  
+
   # Set your application's Apdex threshold value with the 'apdex_t'
   # setting, in seconds. The apdex_t value determines the buckets used
-  # to compute your overall Apdex score. 
+  # to compute your overall Apdex score.
   # Requests that take less than apdex_t seconds to process will be
   # classified as Satisfying transactions; more than apdex_t seconds
   # as Tolerating transactions; and more than four times the apdex_t
-  # value as Frustrating transactions. 
+  # value as Frustrating transactions.
   # For more about the Apdex standard, see
   # http://newrelic.com/docs/general/apdex
   apdex_t: 0.5
@@ -98,7 +101,7 @@ common: &default_settings
   # won't run.  Useful when you are using the agent to monitor an
   # external resource
   # disable_samplers: true
-  
+
   # If you aren't interested in visibility in these areas, you can
   # disable the instrumentation to reduce overhead.
   #
@@ -106,8 +109,8 @@ common: &default_settings
   # disable_activerecord_instrumentation: true
   # disable_memcache_instrumentation: true
   # disable_dj: true
-  
-  # Certain types of instrumentation such as GC stats will not work if 
+
+  # Certain types of instrumentation such as GC stats will not work if
   # you are running multi-threaded.  Please let us know.
   # multi_threaded = false
 
@@ -125,17 +128,17 @@ development:
   <<: *default_settings
   # Turn off communication to New Relic service in development mode (also
   # 'enabled').
-  # NOTE: for initial evaluation purposes, you may want to temporarily 
+  # NOTE: for initial evaluation purposes, you may want to temporarily
   # turn agent communication on in development mode.
   monitor_mode: false
 
-  # Rails Only - when running in Developer Mode, the New Relic Agent will 
+  # Rails Only - when running in Developer Mode, the New Relic Agent will
   # present performance information on the last 100 transactions you have
   # executed since starting the app server.
   # NOTE: There is substantial overhead when running in developer mode.
-  # Do not use for production or load testing.  
+  # Do not use for production or load testing.
   developer_mode: false
-  
+
   # Enable textmate links
   # textmate: true
 
