--- a/config/_config.yml
+++ b/config/_config.yml
@@ -4,7 +4,6 @@ common:
   # yv-development-cb (works for youversion-web.dev)
   #facebook_app_id: 306713076033387
   #facebook_secret: 1a8bf87913629f4162b6c91e5fe943a2
-
   twitter_key: KobF6Lt0zWDFBDxZgZyg
   twitter_secret: GVXSAfboriqOLFDl6Ux1h9pJpDflkRKTzhap6pUOIOs
   avatar_path: https://d5xlnxqvcdji7.cloudfront.net/users/images/
@@ -19,8 +18,17 @@ common:
   # api_referer: web-dev.youversionapistaging.com
   api_version: "3.0"
   memcache_server: localhost
+  #
+  # Timeouts: all times are in seconds
   api_default_timeout: 10
   rack_execution_timeout: 1000
+  #
+  # Caching: all times are in minutes
+  memoization_cache_expiration: 15
+  very_short_cache_expiration: 2
+  short_cache_expiration: 10
+  long_cache_expiration: 45
+  very_long_cache_expiration: 720
 
 staging:
   api_root: youversionapi.com
