--- a/.tx/config
+++ b/.tx/config
@@ -6,7 +6,7 @@ file_filter = config/locales/<lang>.yml
 source_file = config/locales/en.yml
 source_lang = en
 trans.en_GB = config/locales/en-GB.yml
-trans.pt = config/locales/pt-BR.yml
+trans.pt_BR = config/locales/pt-BR.yml
 trans.zh_CN = config/locales/zh-CN.yml
 trans.zh_TW = config/locales/zh-TW.yml
 
