pt pt-BR pt-PT nonsense

--- a/.tx/config
+++ b/.tx/config
@@ -7,6 +7,7 @@ source_file = config/locales/en.yml
 source_lang = en
 trans.en_GB = config/locales/en-GB.yml
 trans.pt_BR = config/locales/pt-BR.yml
+trans.pt_PT = config/locales/pt-PT.yml
 trans.zh_CN = config/locales/zh-CN.yml
 trans.zh_TW = config/locales/zh-TW.yml
 
