adding defaults option for ReferenceString class

--- a/config/osis_to_usfm.yml
+++ b/config/osis_to_usfm.yml
@@ -494,7 +494,7 @@
   '4bar': '4BA'
   'eplao': 'LAO'
   'lkac': 'LKA'
-    "1 aisiitonokin": '1CH'
+  "1 aisiitonokin": '1CH'
   "1 amateka": '1CH'
   "1 babad": '1CH'
   "1 bansa israel": '1CH'
@@ -3961,7 +3961,7 @@
   "lyi": 'DEU'
   "m. sh": 'DEU'
   "mbraa ke̱be̱e̱sa": 'DEU'
-  "mho" peim:": 'DEU'
+  "mho\" peim:": 'DEU'
   "nzamc leiz-latc": 'DEU'
   "pakartoto Įstatymo": 'DEU'
   "pangandharing toret": 'DEU'
@@ -3974,7 +3974,7 @@
   "ramg leib latg": 'DEU'
   "soera moze v.": 'DEU'
   "tara jahprang": 'DEU'
-  "tarha" tid poin"": 'DEU'
+  "tarha\" tid poin\"": 'DEU'
   "tayusima": 'DEU'
   "thu hilhkikna": 'DEU'
   "thuhil kikna": 'DEU'
@@ -4089,8 +4089,8 @@
   "pengkhotbah": 'ECC'
   "pengkhutbah": 'ECC'
   "pethakeshüu": 'ECC'
-  "pha,jhi" dao:": 'ECC'
-  "phajhi" dang:": 'ECC'
+  "pha,jhi\" dao:": 'ECC'
+  "phajhi\" dang:": 'ECC'
   "phungchimtu": 'ECC'
   "prediger": 'ECC'
   "predikaren": 'ECC'
@@ -4523,7 +4523,7 @@
   "tashitungarangu": 'EXO'
   "tawˆ kʼai ve li‸": 'EXO'
   "teek": 'EXO'
-  "thu' lo" mougsoug"": 'EXO'
+  "thu' lo\" mougsoug\"": 'EXO'
   "toukepra": 'EXO'
   "u-eksodusi": 'EXO'
   "xuất ai cập ký": 'EXO'
@@ -5731,7 +5731,7 @@
   "soetuon": 'JDG'
   "suhˉ jehˬ ve li‸": 'JDG'
   "tara agyi": 'JDG'
-  "tarha" agyi": 'JDG'
+  "tarha\" agyi": 'JDG'
   "teisėjų": 'JDG'
   "thukhente": 'JDG'
   "to parengnge’": 'JDG'
@@ -6726,8 +6726,8 @@
   "ulevitikusi": 'LEV'
   "upacara": 'LEV'
   "walawi": 'LEV'
-  "xeim: ngaui"": 'LEV'
-  "xoin" ngei"": 'LEV'
+  "xeim: ngaui\"": 'LEV'
+  "xoin\" ngei\"": 'LEV'
   "ΛΕΥΙΤΙΚΟΝ": 'LEV'
   "ЛЕВИТ": 'LEV'
   "Левит": 'LEV'
@@ -7535,7 +7535,7 @@
   "gamlak vakna": 'NUM'
   "gyaung: su:": 'NUM'
   "gyung": 'NUM'
-  "gyung: soo"": 'NUM'
+  "gyung: soo\"": 'NUM'
   "heh puiˉ hkʼaw ve li‸": 'NUM'
   "hes.": 'NUM'
   "hesabu": 'NUM'
@@ -8039,7 +8039,7 @@
   "châm ngôn": 'PRO'
   "cong-mengh waac": 'PRO'
   "dang: zhoem": 'PRO'
-  "dao: zham"": 'PRO'
+  "dao: zham\"": 'PRO'
   "diane": 'PRO'
   "diarhebion": 'PRO'
   "diema": 'PRO'
@@ -8172,11 +8172,11 @@
   "abÙ Ọma": 'PSA'
   "amahubo": 'PSA'
   "amarhubo": 'PSA'
-  "caung: khin"": 'PSA'
+  "caung: khin\"": 'PSA'
   "chieliko": 'PSA'
   "chiˇ mvuh ve li‸": 'PSA'
   "chungh": 'PSA'
-  "coung" nghei": 'PSA'
+  "coung\" nghei": 'PSA'
   "dipesalema": 'PSA'
   "dipesaleme": 'PSA'
   "dipesalome": 'PSA'
@@ -8378,7 +8378,7 @@
   "pinandŬng": 'REV'
   "pinointalang": 'REV'
   "plak jhi": 'REV'
-  "qhu" byid:": 'REV'
+  "qhu\" byid:": 'REV'
   "ra apocalipsi": 'REV'
   "razodetje": 'REV'
   "rev": 'REV'
@@ -8842,8 +8842,8 @@
   "sawˉla‸monˍ ve kʼa muiˬ hkawˇ": 'SNG'
   "sefela sa difela": 'SNG'
   "sefela sa salomone": 'SNG'
-  "sholamon nghaui" caung:": 'SNG'
-  "sholumon jikhoin"": 'SNG'
+  "sholamon nghaui\" caung:": 'SNG'
+  "sholumon jikhoin\"": 'SNG'
   "sinding dit abantug": 'SNG'
   "sinoenÕ seboea": 'SNG'
   "solomon": 'SNG'
