--- a/config/_config.yml
+++ b/config/_config.yml
@@ -12,10 +12,10 @@ common:
   avatar_path_direct: https://static-youversionapi-com.s3.amazonaws.com/users/images/
   bloodhound_username: lifechurchtv
   bloodhound_password: password
-  #api_root: youversionapi.com
-  #api_referer: web-dev.youversionapi.com
-  api_root: youversionapistaging.com
-  api_referer: web-dev.youversionapistaging.com
+  api_root: youversionapi.com
+  api_referer: web-dev.youversionapi.com
+  #api_root: youversionapistaging.com
+  #api_referer: web-dev.youversionapistaging.com
   api_version: "3.0"
   memcache_server: localhost
   #
@@ -32,18 +32,14 @@ common:
   rate_limit: 120
 
 staging:
-  api_root: youversionapistaging.com
-  api_referer: web-dev.youversionapistaging.com
-  #api_root: youversionapi.com
-  #api_referer: web-staging.youversionapi.com
+  api_root: youversionapi.com
+  api_referer: web-staging.youversionapi.com
   api_default_timeout: 5
   rack_execution_timeout: 15
 
 production:
-  api_root: youversionapistaging.com
-  api_referer: web-dev.youversionapistaging.com
-  #api_root: youversionapi.com
-  #api_referer: web.youversionapi.com
+  api_root: youversionapi.com
+  api_referer: web.youversionapi.com
   api_default_timeout: 5
   rack_execution_timeout: 15
   memcache_server: memcache.youversion.com
