--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ development:
 
 test:
   <<: *common
-  database: yv_web_test
+  database: yv_web_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 staging:
   <<: *common
