--- a/config/_config.yml
+++ b/config/_config.yml
@@ -35,10 +35,10 @@ development:
   rack_execution_timeout: 15
 
 staging:
-  api_root: youversionapistaging.com
+  api_root: youversionapi.com
   api_referer: web-dev-staging.youversionapistaging.com
   api_version: "3.1"
-  api_default_timeout: 5
+  api_default_timeout: 15
   rack_execution_timeout: 15
 
 test:
