Bookmark titles now show up appropriately.

--- a/config/_config.yml
+++ b/config/_config.yml
@@ -28,8 +28,8 @@ common:
   rate_limit: 120
 
 development:
-  api_root: youversionapi.com
-  api_referer: web-dev-staging.youversionapistaging.com
+  api_root: youversionapistaging.com
+  api_referer: web-dev-local.youversionapistaging.com
   api_version: "3.1"
   api_default_timeout: 5
   rack_execution_timeout: 15
@@ -44,7 +44,7 @@ staging:
 test:
   api_root: youversionapistaging.com
   api_referer: web-dev-tests.youversionapistaging.com
-  api_version: "3.0"
+  api_version: "3.1"
   api_default_timeout: 15
   rack_execution_timeout: 15
 
