--- a/config/i18n-js.yml
+++ b/config/i18n-js.yml
@@ -1,3 +1,5 @@
 translations:
-- file: "app/assets/javascripts/i18n/translations.js"
-  only: ['*.moments.*' , '*.social.*']
+  - file: "app/assets/javascripts/i18n/%{locale}.js"
+    only:
+      - "moments"
+      - "social"
