--- a/config/_config.yml
+++ b/config/_config.yml
@@ -14,6 +14,8 @@ common:
   api_referer: web-dev.youversionapi.com
   api_version: "3.1"
   memcache_server: localhost
+  smartling_api_key: ''
+  smartling_project_id: ''
   #
   # Timeouts: all times are in seconds
   api_default_timeout: 10
