--- a/config/_config.yml
+++ b/config/_config.yml
@@ -1,9 +1,12 @@
 common:
-  facebook_app_id: 105030176203924
-  facebook_secret: 9d03678ddd8b5588c4e6c91bd996cce2
+  # facebook_app_id: 105030176203924
+  # facebook_secret: 9d03678ddd8b5588c4e6c91bd996cce2
   # yv-development-cb (works for youversion-web.dev)
-  #facebook_app_id: 306713076033387
-  #facebook_secret: 1a8bf87913629f4162b6c91e5fe943a2
+  # facebook_app_id: 306713076033387
+  # facebook_secret: 1a8bf87913629f4162b6c91e5fe943a2
+  # Bible Test App (bible.dev)
+  facebook_app_id: 818055158234752
+  facebook_secret: 05d219f1c41d63f8ef34dd404cccb64d
   twitter_key: KobF6Lt0zWDFBDxZgZyg
   twitter_secret: GVXSAfboriqOLFDl6Ux1h9pJpDflkRKTzhap6pUOIOs
   avatar_path: https://d5xlnxqvcdji7.cloudfront.net/users/images/
