--- a/config/_config.yml
+++ b/config/_config.yml
@@ -40,6 +40,8 @@ development:
   api_version: "3.1"
   api_default_timeout: 15000
   rack_execution_timeout: 15000
+  twitter_key: "HhYNsW1KCxFH5WeCQ3nRXQ"
+  twitter_secret: "LppBTdEyoJ3ASfPqxHz97IDW5UxpXVim2DbrqdJSrTI"
 
 staging:
   #api_root: youversionapi.com
